fix letter spacing

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,6 +3,7 @@ body {
   margin: 0em;
   overflow-x: hidden;
   font-family: "Trirong", serif;
+  letter-spacing: 1.5px;
 }
 
 p {
@@ -10,6 +11,7 @@ p {
   font-weight: 600;
   font-size: 14px;
   line-height: 21px;
+  letter-spacing: 1.5px;
   text-align: center;
   color: #FFFFFF;
   display: block;
